[package]
name = "tuple-fut"
version = "0.1.0"
authors = ["Miquel van Smoorenburg <mikevs@xs4all.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
futures = "0.3"
tokio = { version = "1.0", features = [ "full" ] }
